<resources>
    <string name="app_name">ViewsAvanzadosKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_constraint">Nicole Edmons</string>
    <string name="ocupacion_constraint">UI/UX Designer | Front End Developer</string>
    <string name="ciudad_constraint">San Francisco, CA.</string>
    <string name="num_followers_constraint">1845</string>
    <string name="num_following_constraint">698</string>
    <string name="following_constraint">Following</string>
    <string name="posts_constraint">Posts</string>
    <string name="num_posts_constraint">4219</string>
    <string name="followers_constraint">Followers</string>
    <string name="titulo_constraint">About Nicole</string>
    <string name="cuerpo_constraint">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.</string>
    <string name="background_constraint">background</string>
</resources>